minor bug fixes - spacing

--- a/css/about_me_styles.css
+++ b/css/about_me_styles.css
@@ -120,9 +120,9 @@ main {
 }
 
 .skills-interest {
-    max-width: 30%;
+    max-width: 35%;
     display: flex;
-    gap: 15%;
+    gap: 10%;
 }
 
 footer {
